# pyglider

./: .flake8  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  README.md  codecov.yml  docs-requirements.txt  environment.yml  get_examples.py  pyproject.toml  readthedocs.yml  requirements.txt  setup.py  tests-requirements.txt
.circleci/: config.yml
.github/: CONTRIBUTING.md
.github/workflows/: doc-artifacts.yml  publish-to-pypi.yml  tests.yml
docs/: Install.md  adjust_CTD.md  conf.py  contributing.md  development.md  getting-started-seaexplorer.md  getting-started-slocum.md  index.md  og10-yaml.md  requirements.txt  testing.md
docs/pyglider/: pyglider.bitstring.rst  pyglider.ncprocess.rst  pyglider.plotting.rst  pyglider.rst  pyglider.seaexplorer.rst  pyglider.slocum.rst  pyglider.utils.rst  pyglider.website.rst
example/: deployment.yml  getdeployment_metainfo.py  process_deployment.py
example-sea021/: Makefile  deploymentRealtime.yml  process_deploymentRealTime.py
example-sea021/realtime_raw/: sea021.59.gli.sub.10  sea021.59.gli.sub.11  sea021.59.gli.sub.12  sea021.59.gli.sub.13  sea021.59.gli.sub.14  sea021.59.gli.sub.15  sea021.59.gli.sub.16  sea021.59.gli.sub.17  sea021.59.gli.sub.18  sea021.59.gli.sub.19  sea021.59.gli.sub.2  sea021.59.gli.sub.20  sea021.59.gli.sub.3  sea021.59.gli.sub.4  sea021.59.gli.sub.5  sea021.59.gli.sub.6  sea021.59.gli.sub.7  sea021.59.gli.sub.8  sea021.59.gli.sub.9  sea021.59.pld1.raw.10  sea021.59.pld1.raw.11  sea021.59.pld1.raw.12  sea021.59.pld1.raw.13  sea021.59.pld1.raw.14  sea021.59.pld1.raw.15  sea021.59.pld1.raw.16  sea021.59.pld1.raw.17  sea021.59.pld1.raw.18  sea021.59.pld1.raw.19  sea021.59.pld1.raw.2  sea021.59.pld1.raw.20  sea021.59.pld1.raw.3  sea021.59.pld1.raw.4  sea021.59.pld1.raw.5  sea021.59.pld1.raw.6  sea021.59.pld1.raw.7  sea021.59.pld1.raw.8  sea021.59.pld1.raw.9
example-seaexplorer/: deploymentRealtime.yml  process_deploymentRealTime.py
example-seaexplorer-legato-flntu-arod-ad2cp/: deploymentRealtime.yml  plottingconfig.yml  process_deploymentRealTime.py
example-seaexplorer/offloads/Sea035-M010/: SEA035.10.gli.sub.006  SEA035.10.gli.sub.010  SEA035.10.gli.sub.012  SEA035.10.gli.sub.014  SEA035.10.gli.sub.021  SEA035.10.gli.sub.025  SEA035.10.gli.sub.030  SEA035.10.gli.sub.037  SEA035.10.gli.sub.048  SEA035.10.gli.sub.049  SEA035.10.gli.sub.050  SEA035.10.gli.sub.052  SEA035.10.gli.sub.053  SEA035.10.gli.sub.056  SEA035.10.gli.sub.058  SEA035.10.gli.sub.059  SEA035.10.gli.sub.062  SEA035.10.gli.sub.067  (+37 more)
example-seaexplorer/realtime_raw/: sea035.12.gli.sub.40  sea035.12.gli.sub.42  sea035.12.gli.sub.44  sea035.12.pld1.sub.37  sea035.12.pld1.sub.38  sea035.12.pld1.sub.46  sea035.12.pld1.sub.49
example-slocum/: Readme.md  deploymentRealtime.yml  process_deploymentRealTime.py
example-slocum/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
example-slocum/cac/: 1FB16B59.CAC  32D5CF2A.CAC  4160369A.CAC  A5D6D273.CAC  B4B6E7D4.CAC  D1C8FC06.CAC  E4BA6A17.CAC
example-slocum/realtime_raw/: rosie_713-2019-166-0-156.tbd  rosie_713-2019-166-0-159.sbd
example/L1-profiles/: rosie713-20180915T1616.nc  rosie713-20180915T2047.nc  rosie713-20180916T0123.nc  rosie713-20180916T0549.nc
example/binary/: 00380030.DBD  00380030.EBD  00380031.DBD  00380031.EBD  00380032.DBD  00380032.EBD  00380033.DBD  00380033.EBD  00380034.DBD  00380034.EBD  00380035.DBD  00380035.EBD  00380036.DBD  00380036.EBD  00380037.DBD  00380037.EBD  00380038.DBD  00380038.EBD  00380039.DBD  00380039.EBD
example/rawnc/: 00380030.dbd.nc  00380030.ebd.nc  00380031.dbd.nc  00380031.ebd.nc  00380032.dbd.nc  00380032.ebd.nc  00380033.dbd.nc  00380033.ebd.nc  00380034.dbd.nc  00380034.ebd.nc  00380035.dbd.nc  00380035.ebd.nc  00380036.dbd.nc  00380036.ebd.nc  00380037.dbd.nc  00380037.ebd.nc  00380038.dbd.nc  00380038.ebd.nc  00380039.dbd.nc  00380039.ebd.nc
example_html_templates/: deploymentSummary.html  deploymentsInfo.html  deploymentsInfoNew.html
pyglider/: _config_components.py  _version.py  config.py  example_data.py  mapplotting.py  ncprocess.py  ncprocess.py.save  plotting.py  process_adjusted.py  seaexplorer.py  slocum.py  utils.py  website.py  yaml_check.py
tests/: README.md  _copyresultstoexpected.py  _generate_expected_cdl.py  _generate_expected_yaml.py  conftest.py  environment.yml  nc_test_helpers.py  requirements.txt  test_config.py  test_process_adjusted_seaexplorer.py  test_process_adjusted_seaexplorer_nc.py  test_process_adjusted_seaexplorer_yaml.py  test_process_adjusted_slocum.py  test_process_adjusted_slocum_nc.py  test_process_adjusted_slocum_yaml.py  test_pyglider.py  test_pyglider_yaml.py  test_seaexplorer.py  test_seaexplorer_nc.py  test_seaexplorer_og10_nc.py  test_seaexplorer_og10_yaml.py  test_seaexplorer_yaml.py  test_slocum.py  test_slocum_nc.py  test_slocum_og10_nc.py  test_slocum_og10_yaml.py  test_slocum_yaml.py  test_utils.py  utils.py  yaml_test_helpers.py
tests/data-seaexplorer/: Makefile
tests/example-data/: .gitignore
(+609 files in other folders)
