[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pyglider"
dynamic = ["version"]
description = "Glider data to netCDF translation in python"
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name = "Jody Klymak", email = "jklymak@gmail.com" },
]
requires-python = ">=3.9"
dependencies = [
  "xarray",
  "dask",
  "netcdf4",
  "gsw",
  "scipy",
  "bitstring",
  "bottleneck",
  "pooch",
  "polars>=1.1",
  "numpy",
  "dbdreader",
]

[project.urls]
Homepage = "https://pyglider.readthedocs.io"
Repository = "https://github.com/c-proof/pyglider"

[tool.setuptools.packages.find]
include = ["pyglider*"]

[tool.setuptools_scm]
version_file = "pyglider/_version.py"

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
testpaths = ["tests"]
pythonpath = ["tests"]
xfail_strict = true
minversion = "7"
markers = [ # can be skipped by doing `pytest -m "not slow"` etc.
  "flaky: flaky tests",
  "slow: slow tests",
]

filterwarnings = [
  "error",
  "default::DeprecationWarning",
  "error::DeprecationWarning:pyglider",
  # Advisory suggestion to update deployment YAML; not a bug
  "ignore:For deadreckon=False:UserWarning",
]

[tool.ruff.lint]
select = [
  "F", # pyflakes
  "I", # isort
  "E", # Error
  # "D",  # pydocstyle
  # "B",  # Bugbear
  # "UP", # pyupgrade
  # "LOG", # logging
  # "ICN", # import conventions
  # "G", # logging-format
  # "RUF", # ruff
]

ignore = [
  # TODO: Remove
  "E402", # Module level import not at top of file

  "F841", # Local variable `...` is assigned to but never used
  "E722", # Do not use bare `except`
  "E501", # Line too long (... > 88)
  "E741", # Ambiguous variable name: `l`
]
[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["pyglider"]

[tool.pixi.workspace]
name = "pyglider"
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
pyglider = { path = ".", editable = true }
bitstring = "*"
dbdreader = "*"
dask = "*"
gsw = "*"
netcdf4 = "*"
numpy = "*"
pooch = "*"
scipy = "*"
xarray = "*"
polars = ">=1.1"

[tool.pixi.dependencies]
matplotlib = ">=3.11.0,<4"
jupyterlab = ">=4.6.0,<5"
ipykernel = ">=7.3.0,<8"
ipympl = ">=0.10.0,<0.11"
bottleneck = ">=1.6.0,<2"
pip = ">=26.1.2,<27"

[tool.pixi.tasks]

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-cov = "*"
compliance-checker = "*"

[tool.pixi.feature.test.tasks]
test = { cmd = "pytest" }

[tool.pixi.environments]
test = { features = ["test"], solve-group = "default" }
